...
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.AppColors
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.halfMargin
import dagger.hilt.android.lifecycle.HiltViewModel
import kotlinx.coroutines.flow.Flow
import javax.inject.Inject

const val BottomAppBarTag = "BottomAppBarTag"
@Composable
fun CustomBottomAppBar(
    navigator: DestinationsNavigator,
    selectedScreen: String,
) {
    val viewModel: CustomBottomAppBarViewModel = hiltViewModel()
...
