...
                            )
                        }
                    }
                },
                actions = {
                    if (onIconClick != null) {
                        IconButton(onClick = onIconClick, modifier=Modifier.testTag("Add")) {
                            Icon(
                                imageVector = Icons.Filled.Add,
                                contentDescription = null,
                                tint = AppColors.DarkTextColor
                            )
                        }
...
